--- a/styles/admin.css
+++ b/styles/admin.css
@@ -31,3 +31,19 @@ table, th, td {
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
 }
+
+.product-card {
+  background-color: var(--tertiary-color);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto; */
+  text-align: center;
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 30px;
+}
+
+.price {
+  color: grey;
+  font-size: 22px;
+}
