--- a/styles/admin.css
+++ b/styles/admin.css
@@ -4,8 +4,25 @@
   --tertiary-color: #5756d1;
 }
 
+.new-product-btn, .new-category-btn {
+  height: 40px;
+  background-color: var(--tertiary-color);
+  border: none;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  padding-right: 10px;
+  cursor: pointer;
+}
+
 .new-div {
   margin: 25px 0;
+}
+
+.add-icon {
+  width: 25px;
+  margin-right: 5px;
+  filter: invert(1);
 }
 
 table {
@@ -36,17 +53,11 @@ tr:nth-child(even) {
   margin-right: 20px;
 }
 
-.list {
-  width: 90%;
-  height: 300px;
+.categories-list-div {
+  width: 100%;
+  max-height: 300px;
   overflow-y: auto;
 }
-
-/* #categories-list {
-  position: sticky;
-  top: 0;
-  width: 100%;
-} */
 
 /* The Modal (background) */
 .modal {
