--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,14 +152,16 @@ body {
 /* CONTENT */
 
 .content-box {
-  margin: 30px 100px;
+  margin: auto;
+  margin-top: 50px;
+  width: 92%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: var(--tertiary-color);
 }
 
