--- a/styles/products.css
+++ b/styles/products.css
@@ -10,14 +10,14 @@
 }
 
 .product-item:hover {
-    cursor: grab;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
-    border-radius: 5px;
+  cursor: grab;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+  border-radius: 5px;
 }
 
 .product-item:active {
-    cursor: grabbing;
-    box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+  cursor: grabbing;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
 }
 
 .info-div {
@@ -26,10 +26,10 @@
 
 #products-list > hr,
 #cart-body > hr {
-    width: 100%;
-    border: 0px;
-    border-top: 1.5px solid var(--secondary-color);
-    background-color: transparent;
+  width: 100%;
+  border: 0px;
+  border-top: 1.5px solid var(--secondary-color);
+  background-color: transparent;
 }
 
 .myImg {
@@ -75,7 +75,7 @@
   height: 150px;
 }
 
-.modal-content, #caption {    
+.modal-content, #caption {
   -webkit-animation-name: zoom;
   -webkit-animation-duration: 0.6s;
   animation-name: zoom;
@@ -83,12 +83,12 @@
 }
 
 @-webkit-keyframes zoom {
-  from {-webkit-transform: scale(0)} 
+  from {-webkit-transform: scale(0)}
   to {-webkit-transform: scale(1)}
 }
 
 @keyframes zoom {
-  from {transform: scale(0.1)} 
+  from {transform: scale(0.1)}
   to {transform: scale(1)}
 }
 
@@ -177,7 +177,7 @@
   position: -webkit-sticky;
   position: -moz-sticky;
   position: -ms-sticky;
-  position: -o-sticky;  
+  position: -o-sticky;
   position: sticky;
   z-index: 3;
   top: 0;
@@ -222,7 +222,7 @@
   position: -webkit-sticky;
   position: -moz-sticky;
   position: -ms-sticky;
-  position: -o-sticky;  
+  position: -o-sticky;
   position: sticky;
   z-index: 3;
   bottom: 0;
@@ -244,12 +244,12 @@
   justify-content: center;
   z-index: 3;
   width: 25px;
-  height: 25px;  
+  height: 25px;
   position: absolute;
   bottom: 8px;
   right: 8px;
-  transition: 0.3s; 
-  box-shadow: 1px 1px 2px #888; 
+  transition: 0.3s;
+  box-shadow: 1px 1px 2px #888;
   border-radius: 50px;
   align-items: center;
   justify-items: center;
@@ -376,7 +376,7 @@
   position: -webkit-sticky;
   position: -moz-sticky;
   position: -ms-sticky;
-  position: -o-sticky;  
+  position: -o-sticky;
   position: sticky;
   top: 0;
   background-color: var(--secondary-color);
@@ -395,4 +395,37 @@
 #loading-image {
   width: 256px;
   height: 256px;
+}
+
+.product-modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #263256;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 10px;
+  width: 80%;
+}
+
+.detailed-product-card {
+  background-color: var(--tertiary-color);
+  text-align: center;
+  border-radius: 10px;
+  padding: 20px;
+  width: 60%;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
