--- a/styles/admin.css
+++ b/styles/admin.css
@@ -4,7 +4,7 @@
   --tertiary-color: #5756d1;
 }
 
-.new-product-btn, .new-category-btn {
+.new-product-btn, .new-category-btn, .filter-span {
   height: 40px;
   background-color: var(--tertiary-color);
   border: none;
@@ -13,6 +13,12 @@
   align-items: center;
   padding-right: 10px;
   cursor: pointer;
+}
+
+.filter-span {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: 30px;
 }
 
 .new-div {
@@ -93,4 +99,55 @@ tr:nth-child(even) {
 
 .edit-btn {
   margin-right: 20px;
+}
+
+/* ADMIN ORDERS */
+
+.orders-outer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.flex-0 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.order-item {
+    margin-bottom: 32px;
+}
+
+.order-item-content {
+    background-color: #00000050;
+}
+
+table {
+    width: 90%;
+    border-collapse: collapse;
+}
+
+tr > * {
+    border: solid white 1px;
+    text-align: center;
+}
+
+.order-products > *:visited, .order-products > * {
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #00000050;
+}
+
+*[hidden=true] {
+    display: none;
+}
+
+.product-image {
+    max-width: 15vw;
+    max-height: 15vw;
 }
