--- a/styles/admin.css
+++ b/styles/admin.css
@@ -50,19 +50,29 @@
   padding: 20px;
   border: 1px solid #888;
   border-radius: 10px;
-  width: 80%;
+  width: 50%;
 }
 
 #form {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .form-input {
+  flex: 0 0 100%;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  padding: 10px;
+}
+
+label {
+  margin-right: 10px;
+}
+
+.img-input {
+  width: 100%;
 }
 
 /* ADMIN CATEGORIES */
