--- a/styles/products.css
+++ b/styles/products.css
@@ -157,6 +157,7 @@
   scrollbar-width: thin;
   scrollbar-color: white var(--secondary-color);
   box-shadow: 1px 1px 2px black;
+  z-index: 99;
 }
 
 #floatingcart::-webkit-scrollbar {
