--- a/styles/products.css
+++ b/styles/products.css
@@ -330,12 +330,12 @@
 #cart-submit-modal {
   padding: 0;
   overflow: hidden;
+  z-index: 100;
 }
 
 #cart-submit-body {
-  width: 100%;
-  max-width: 100%;
-  height: 100%;
+  width: 85%;
+  height: 80%;
 }
 
 #cart-submit-body > object {
